2010-01-22  Werner Koch  <wk@g10code.com>

	* patches/gpgme-1.2.0/03-w32-socket.patch: New.
	* Makefile.am (EXTRA_DIST): Add it.

2010-01-15  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update libetpan, claws-mail and plugins.

2010-01-13  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gpgol.

2010-01-11  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update checksums of some claws plugins.

2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgex.

	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Disable Qt support.
	* src/inst-gpgme.nsi: Do not install qt version.

2010-01-07  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4: Fix my last change so that --enable-debug is not
	enabled by default.

2010-01-06  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/inst-libpng.nsi (install libpng binaries for testing): Comment out.

2010-01-05  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws Mail and its plugins, fix
	packages.

2010-01-05  Werner Koch  <wk@g10code.com>

	* packages/download.sh: Add option --quiet.

	* m4/gpg4win.m4: Quote variables in test comamnds instead of using
	instead of comparing against xno or xyes.

	* packages/packages.current: Update gpgex and gpgol.  Update
	libpng and pkgconfig.

2009-12-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libgcrypt and GnuPG.  Update
	GpgOL to the latest svn version.

2009-12-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/installer.nsi,
	  doc/logo/gpg4win-nsis-wizard-install-164x314.bmp,
	  doc/logo/gpg4win-nsis-wizard-uninstall-164x314.bmp,
	  doc/logo/gpg4win-nsis-install.ico,
	  doc/logo/gpg4win-nsis-header-install-150x57.bmp,
  	  doc/logo/gpg4win-nsis-uninstall.ico,
	  doc/logo/gpg4win-nsis-header-uninstall-150x57.bmp:
	  Add new bitmaps and icons for nsis installer.

2009-12-15  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
