@@ -1,3 +1,7 @@
+2010-01-25  Werner Koch  <wk@g10code.com>
+
+	* patches/gpgme-1.2.0/03-w32-socket.patch: Fix patch.
+
 2010-01-22  Werner Koch  <wk@g10code.com>
 
 	* patches/gpgme-1.2.0/03-w32-socket.patch: New.
